--- a/covid19/covMob.ipynb
+++ b/covid19/covMob.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 1,
    "id": "970472e3-316b-43c9-a7d1-4d81a6d72368",
    "metadata": {},
    "outputs": [],
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 201,
+   "execution_count": 2,
    "id": "cd785a0d-5bfb-4eca-a882-aedb881a0623",
    "metadata": {},
    "outputs": [],
@@ -143,6 +143,362 @@
     "#diff = DeepDiff(dict_country, country_dict) # note that '==' does not work to compare the two dictionaries here! Use DeepDiff instead\n",
     "#diff"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "a9c7ce52-6c4b-4057-b6d3-f9ba5102cf4d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>country_region_code</th>\n",
+       "      <th>country_region</th>\n",
+       "      <th>sub_region_1</th>\n",
+       "      <th>sub_region_2</th>\n",
+       "      <th>metro_area</th>\n",
+       "      <th>iso_3166_2_code</th>\n",
+       "      <th>census_fips_code</th>\n",
+       "      <th>place_id</th>\n",
+       "      <th>rtrc</th>\n",
+       "      <th>grph</th>\n",
+       "      <th>prks</th>\n",
+       "      <th>tran</th>\n",
+       "      <th>work</th>\n",
+       "      <th>resi</th>\n",
+       "      <th>vac</th>\n",
+       "      <th>case_mil</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>date</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2020-02-15</th>\n",
+       "      <td>US</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>ChIJCzYy5IS16lQRQrfeQ5K5Oxw</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>15.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>-1.0</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-02-16</th>\n",
+       "      <td>US</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>ChIJCzYy5IS16lQRQrfeQ5K5Oxw</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>16.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>-1.0</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-02-17</th>\n",
+       "      <td>US</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>ChIJCzYy5IS16lQRQrfeQ5K5Oxw</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>28.0</td>\n",
+       "      <td>-9.0</td>\n",
+       "      <td>-24.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-02-18</th>\n",
+       "      <td>US</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>ChIJCzYy5IS16lQRQrfeQ5K5Oxw</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>-1.0</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-02-19</th>\n",
+       "      <td>US</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>ChIJCzYy5IS16lQRQrfeQ5K5Oxw</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021-05-11</th>\n",
+       "      <td>US</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>ChIJCzYy5IS16lQRQrfeQ5K5Oxw</td>\n",
+       "      <td>-8.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>25.0</td>\n",
+       "      <td>-26.0</td>\n",
+       "      <td>-29.0</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>78.68</td>\n",
+       "      <td>101.643</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021-05-12</th>\n",
+       "      <td>US</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>ChIJCzYy5IS16lQRQrfeQ5K5Oxw</td>\n",
+       "      <td>-6.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>27.0</td>\n",
+       "      <td>-24.0</td>\n",
+       "      <td>-29.0</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>79.14</td>\n",
+       "      <td>108.274</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021-05-13</th>\n",
+       "      <td>US</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>ChIJCzYy5IS16lQRQrfeQ5K5Oxw</td>\n",
+       "      <td>-5.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>43.0</td>\n",
+       "      <td>-23.0</td>\n",
+       "      <td>-29.0</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>79.71</td>\n",
+       "      <td>115.032</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021-05-14</th>\n",
+       "      <td>US</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>ChIJCzYy5IS16lQRQrfeQ5K5Oxw</td>\n",
+       "      <td>-7.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>39.0</td>\n",
+       "      <td>-20.0</td>\n",
+       "      <td>-28.0</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>80.26</td>\n",
+       "      <td>127.670</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021-05-15</th>\n",
+       "      <td>US</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>ChIJCzYy5IS16lQRQrfeQ5K5Oxw</td>\n",
+       "      <td>-6.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>65.0</td>\n",
+       "      <td>-10.0</td>\n",
+       "      <td>-13.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>80.98</td>\n",
+       "      <td>87.172</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>456 rows × 16 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           country_region_code country_region sub_region_1 sub_region_2  \\\n",
+       "date                                                                      \n",
+       "2020-02-15                  US  United States          NaN          NaN   \n",
+       "2020-02-16                  US  United States          NaN          NaN   \n",
+       "2020-02-17                  US  United States          NaN          NaN   \n",
+       "2020-02-18                  US  United States          NaN          NaN   \n",
+       "2020-02-19                  US  United States          NaN          NaN   \n",
+       "...                        ...            ...          ...          ...   \n",
+       "2021-05-11                  US  United States          NaN          NaN   \n",
+       "2021-05-12                  US  United States          NaN          NaN   \n",
+       "2021-05-13                  US  United States          NaN          NaN   \n",
+       "2021-05-14                  US  United States          NaN          NaN   \n",
+       "2021-05-15                  US  United States          NaN          NaN   \n",
+       "\n",
+       "           metro_area iso_3166_2_code  census_fips_code  \\\n",
+       "date                                                      \n",
+       "2020-02-15        NaN             NaN               NaN   \n",
+       "2020-02-16        NaN             NaN               NaN   \n",
+       "2020-02-17        NaN             NaN               NaN   \n",
+       "2020-02-18        NaN             NaN               NaN   \n",
+       "2020-02-19        NaN             NaN               NaN   \n",
+       "...               ...             ...               ...   \n",
+       "2021-05-11        NaN             NaN               NaN   \n",
+       "2021-05-12        NaN             NaN               NaN   \n",
+       "2021-05-13        NaN             NaN               NaN   \n",
+       "2021-05-14        NaN             NaN               NaN   \n",
+       "2021-05-15        NaN             NaN               NaN   \n",
+       "\n",
+       "                               place_id  rtrc  grph  prks  tran  work  resi  \\\n",
+       "date                                                                          \n",
+       "2020-02-15  ChIJCzYy5IS16lQRQrfeQ5K5Oxw   6.0   2.0  15.0   3.0   2.0  -1.0   \n",
+       "2020-02-16  ChIJCzYy5IS16lQRQrfeQ5K5Oxw   7.0   1.0  16.0   2.0   0.0  -1.0   \n",
+       "2020-02-17  ChIJCzYy5IS16lQRQrfeQ5K5Oxw   6.0   0.0  28.0  -9.0 -24.0   5.0   \n",
+       "2020-02-18  ChIJCzYy5IS16lQRQrfeQ5K5Oxw   0.0  -1.0   6.0   1.0   0.0   1.0   \n",
+       "2020-02-19  ChIJCzYy5IS16lQRQrfeQ5K5Oxw   2.0   0.0   8.0   1.0   1.0   0.0   \n",
+       "...                                 ...   ...   ...   ...   ...   ...   ...   \n",
+       "2021-05-11  ChIJCzYy5IS16lQRQrfeQ5K5Oxw  -8.0   4.0  25.0 -26.0 -29.0   7.0   \n",
+       "2021-05-12  ChIJCzYy5IS16lQRQrfeQ5K5Oxw  -6.0   3.0  27.0 -24.0 -29.0   7.0   \n",
+       "2021-05-13  ChIJCzYy5IS16lQRQrfeQ5K5Oxw  -5.0   3.0  43.0 -23.0 -29.0   6.0   \n",
+       "2021-05-14  ChIJCzYy5IS16lQRQrfeQ5K5Oxw  -7.0   0.0  39.0 -20.0 -28.0   6.0   \n",
+       "2021-05-15  ChIJCzYy5IS16lQRQrfeQ5K5Oxw  -6.0   3.0  65.0 -10.0 -13.0   0.0   \n",
+       "\n",
+       "              vac  case_mil  \n",
+       "date                         \n",
+       "2020-02-15   0.00     0.000  \n",
+       "2020-02-16   0.00     0.000  \n",
+       "2020-02-17   0.00     0.000  \n",
+       "2020-02-18   0.00     0.000  \n",
+       "2020-02-19   0.00     0.000  \n",
+       "...           ...       ...  \n",
+       "2021-05-11  78.68   101.643  \n",
+       "2021-05-12  79.14   108.274  \n",
+       "2021-05-13  79.71   115.032  \n",
+       "2021-05-14  80.26   127.670  \n",
+       "2021-05-15  80.98    87.172  \n",
+       "\n",
+       "[456 rows x 16 columns]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "country_dict[\"United States\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "370ed077-6051-40e6-b59f-99652c96bc4d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
