updates including Frequentist_Case_Study

--- a/covid19/covMob_dataWrangling.ipynb
+++ b/covid19/covMob_dataWrangling.ipynb
@@ -19,6 +19,8 @@
     "from pathlib import Path\n",
     "from deepdiff import DeepDiff\n",
     "from pandas.tseries.holiday import USFederalHolidayCalendar as holidayCalendar\n",
+    "from wwo_hist import retrieve_hist_data\n",
+    "import os\n",
     "%matplotlib inline"
    ]
   },
@@ -36,13 +38,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "id": "70e09a13-9549-48e8-b97e-b7b8d0322410",
    "metadata": {},
    "outputs": [],
    "source": [
     "# load mobility data (https://www.google.com/covid19/mobility/)\n",
-    "df_mob = pd.read_csv('/Users/parkj/Documents/pyDat/dataSet/COVID19_community_mobility_reports/Global_Mobility_Report_asof061521.csv', low_memory=False)\n",
+    "df_mob = pd.read_csv('/Users/parkj/Documents/pyDat/dataSet/COVID19_community_mobility_reports/Global_Mobility_Report_asof092221.csv', low_memory=False)\n",
     "# load new cases data (git local repo: /Users/parkj/Documents/pyDat/dataSet/covid-19-data/, repo: https://github.com/owid/covid-19-data)\n",
     "df_case = pd.read_csv('/Users/parkj/Documents/pyDat/dataSet/covid-19-data/public/data/jhu/new_cases_per_million.csv', low_memory=False)\n",
     "# load vaccination data (git local repo: /Users/parkj/Documents/pyDat/dataSet/covid-19-data/, repo: https://github.com/owid/covid-19-data)\n",
@@ -51,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 45,
    "id": "2fd8714d-8112-4843-bc7d-3e946486ee19",
    "metadata": {},
    "outputs": [],
@@ -63,8 +65,7 @@
     "                                  'transit_stations_percent_change_from_baseline': 'tran', \n",
     "                                  'workplaces_percent_change_from_baseline': 'work',\n",
     "                                  'residential_percent_change_from_baseline': 'resi'}, inplace = False)\n",
-    "df_mob.set_index('date')\n",
-    "df_mob.index = pd.to_datetime(df_mob.index) # convert the index to datetime64"
+    "#df_mob.set_index(pd.to_datetime(df_mob.date),inplace=True)"
    ]
   },
   {
@@ -282,7 +283,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
