--- a/covid19/timeseriesanalysis_XGboost_7day.ipynb
+++ b/covid19/timeseriesanalysis_XGboost_7day.ipynb
@@ -7,26 +7,28 @@
     "tags": []
    },
    "source": [
-    "# 1 Time Series 7-Day Forecasting with XGBoost<a id='1_Time_Series_7-Day_Forecasting_with_XGBoost'></a>"
+    "# 1 Time Series 7-Day Forecasting with XGBoost<a id='1_time_series_7-day_forecasting_with_xbgoost'></a>"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "dcbffa11-2711-4e5a-a57d-ffbed28f1a6c",
+   "id": "7fbed9ea-181d-43e9-98c5-f89fdb89f173",
    "metadata": {},
    "source": [
-    "## 1.1 Contents<a id='1.1_Contents'></a>\n",
-    "* [1 Time Series 7-Day Forecasting with XGBoost](#1_Time_Series_7-Day_Forecasting_with_XGBoost)\n",
-    "    * [1.1 Contents](#1.1_Contents)\n",
-    "    * [1.2 Import](#1.2_Import)"
+    "## 1.1 Contents<a id='1.1_contents'></a>\n",
+    "* [1 Time Series 7-Day Forecasting with XGBoost](#1_time_series_7-day_forecasting_with_xbgoost)\n",
+    "  * [1.1 Contents](#1.1_contents)  \n",
+    "  * [1.2 Import](#1.2_import)\n",
+    "  * [1.3 Function](#1.3_function)\n",
+    "      * [1.3.1 Function: Walk Forward Validation](#1.3.1_walk_forward_validation)\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "c4b16284-a084-4306-80c2-cbfc84a7cbaa",
+   "id": "acf078e3-c34b-4bce-9fc5-445e8fe861d3",
    "metadata": {},
    "source": [
-    "## 1.2 Import<a id='1.2_Import'></a>"
+    "## 1.2 Import<a id='1.2_import'></a>"
    ]
   },
   {
@@ -72,6 +74,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "2e17dc83-5c6e-4cbf-9a72-96feaca6bc96",
+   "metadata": {},
+   "source": [
+    "## 1.3 Function<a id='1.3_function'></a>"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "id": "92114e8b-20b0-4d90-a667-72ded17e9329",
@@ -95,6 +105,14 @@
     "\tif dropnan:\n",
     "\t\tagg.dropna(inplace=True)\n",
     "\treturn agg.values"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8dde5ae3-66dc-4f0d-93b8-45d51fca9ec1",
+   "metadata": {},
+   "source": [
+    "#### 1.3.1 Function: walk_forward_validation <a id = '1.3.1_walk_forward_validation'></a>"
    ]
   },
   {
@@ -1034,6 +1052,14 @@
     "    df_y_yhat = pd.DataFrame({'date':df_feat_targ.index[-n_test:], 'y': [float(i) for i in y], 'yhat': yhat})\n",
     "    # bundle up the results\n",
     "    rez_XGBoost_dict[df_targ_this.columns[0]] = {'error':error, 'y_yhat':df_y_yhat, 'model':modelXG}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "789cf045-a094-4cc7-b802-31173163e7d2",
+   "metadata": {},
+   "source": [
+    "## 1.3 <a id = \"1.3_section\"></a>"
    ]
   },
   {
