--- a/covid19/timeseriesanalysis_RF.ipynb
+++ b/covid19/timeseriesanalysis_RF.ipynb
@@ -5,7 +5,7 @@
    "id": "86b44d64-5d4a-4b40-957d-6ba1bd3fdeae",
    "metadata": {},
    "source": [
-    "# 1 Time Series Forecasting with Random Forest Regression"
+    "# 1 Time Series Forecasting with Random Forest Regression<a id='1_Time_Series_Forecasting_with_Random_Forest_Regression'></a>"
    ]
   },
   {
@@ -19,13 +19,13 @@
     "  * [1.2 Overview](#1.2_Overview)\n",
     "  * [1.3 Imports](#1.3_Imports)\n",
     "  * [1.4 Functions](#1.4_Functions)\n",
-    "     * [1.4.1 Functions: series_to_supervised](#1.4.1_Functions:_series_to_superviesed)\n",
-    "     * [1.4.2 Functions: walk_forward_validation](#1.4.2_Functions:_walk_forward_validation)\n",
-    "     * [1.4.3 Functions: random_forest_forecast](#1.4.3_Functions:_random_forest_forecast)\n",
-    "     * [1.4.4 Functions: train_test_split](#1.4.4_Functions:_train_test_split)\n",
-    "     * [1.4.5 Functions: create_lagged_df](#1.4.5_Functions:_create_lagged_df)\n",
+    "    * [1.4.1 Functions: series_to_supervised](#1.4.1_Functions:_series_to_superviesed)\n",
+    "    * [1.4.2 Functions: walk_forward_validation](#1.4.2_Functions:_walk_forward_validation)\n",
+    "    * [1.4.3 Functions: random_forest_forecast](#1.4.3_Functions:_random_forest_forecast)\n",
+    "    * [1.4.4 Functions: train_test_split](#1.4.4_Functions:_train_test_split)\n",
+    "    * [1.4.5 Functions: create_lagged_df](#1.4.5_Functions:_create_lagged_df)\n",
     "  * [1.5 Load Data](#1.5_Load_Data)\n",
-    "  * [1.6 Organize Features and Targets with Lagging](#1.6_Organize_Features_and_Targets_with_Lagging) \n",
+    "  * [1.6 Organize Features and Targets with Lagging](#1.6_Organize_Features_and_Targets_with_Lagging)  \n",
     "  * [1.7 Fit and Evaluate the Model](#1.7_Fit_and_Evaluate_the_Model)\n",
     "  * [1.8 Visualize Model Performance](#1.8_Visualize_Model_Performance)\n",
     "  * [1.9 Save the Model](#1.9_Save_the_Model)"
@@ -470,7 +470,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
