updating time series mini p mini-project

--- a/covid19/timeseriesanalysis_LSTM_7day_with_lagging.ipynb
+++ b/covid19/timeseriesanalysis_LSTM_7day_with_lagging.ipynb
@@ -32,6 +32,8 @@
     "      * [1.3.8 Function: gini_normalizedc](#1.3.8_gini_normalizedc)\n",
     "      * [1.3.9 Functions: rmse_y_y_pred](#1.3.9_rmse_y_y_pred)\n",
     "      * [1.3.10 Functions: plot_test_set](#1.3.10_plot_test_set)\n",
+    "      * [1.3.11 Functions: split_sequence_features](#1.3.11_split_sequence_features)\n",
+    "  * [1.4 Load data](#1.4_load_data)    \n",
     "  * [1.5 Preprocessing](#1.5_preprocessing)\n",
     "      * [1.5.1 Preprocessing: get feature and target for model training and testing with cross-validation](#1.5.1_get_feature_target)\n",
     "      * [1.5.2 Preprocessing: scale feature and target variables](#1.5.2_scale_feature_target)  \n",
@@ -54,40 +56,6 @@
    },
    "source": [
     "## 1.2 Imports<a id='1.2_imports'></a>"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "id": "fae64b89-8f78-4539-844d-40bd9ba71003",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import os\n",
-    "import pandas as pd\n",
-    "import numpy as np\n",
-    "import numpy.matlib\n",
-    "import matplotlib.pyplot as plt\n",
-    "import pickle\n",
-    "from pathlib import Path\n",
-    "from datetime import date, timedelta\n",
-    "from isoweek import Week\n",
-    "import math\n",
-    "import warnings; warnings.simplefilter('ignore')\n",
-    "\n",
-    "from sklearn.preprocessing import StandardScaler\n",
-    "from sklearn.preprocessing import MinMaxScaler\n",
-    "from sklearn.model_selection import StratifiedKFold\n",
-    "from sklearn.model_selection import TimeSeriesSplit\n",
-    "from sklearn.metrics import mean_squared_error\n",
-    "\n",
-    "from keras.models import Model\n",
-    "from keras.layers import Input, Dense, Concatenate, Reshape, Dropout, LSTM, TimeDistributed\n",
-    "from keras.layers.embeddings import Embedding\n",
-    "from keras.utils.vis_utils import plot_model\n",
-    "\n",
-    "from contextlib import redirect_stdout\n",
-    "%matplotlib inline"
    ]
   },
   {
@@ -428,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 15,
    "id": "f69a6672-9d3b-4195-beee-b707253a5fc3",
    "metadata": {
     "tags": []
@@ -498,6 +466,14 @@
     "        # figure save\n",
     "        fig.savefig(os.path.join('/Users/parkj/Documents/pyDat/pyDatCode/covid19/Figure', \\\n",
     "                                 country+'_'+save_name+'_LSTM_7d.pdf'), tranparent=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "777db75f-505f-4380-8cfa-fe3b0424805f",
+   "metadata": {},
+   "source": [
+    "#### 1.3.11 Functions: split_sequence_features <a id='1.3.11_split_sequence_features'></a>"
    ]
   },
   {
@@ -950,7 +926,7 @@
     "    train_folds.append([sorted_train_timestamp[i] for i in train_idx]) # folds in train set\n",
     "    validation_folds.append([sorted_train_timestamp[i] for i in validation_idx]) # folds in validation set\n",
     "\n",
-    "n_epochs = 500\n",
+    "n_epochs = 1000\n",
     "runs_per_fold = 10\n",
     "\n",
     "cv_ginis = []\n",
@@ -991,7 +967,7 @@
     "    for i, cvg in enumerate(cv_gini):\n",
     "        print('\\nFold %d prediction cv gini_%d: %.5f\\n' %(fold,i,cv_gini[i]))\n",
     "    \n",
-    "    train_preds.append(np.mean(np.asarray(train_preds_fold),axis=0)) # ave\n",
+    "    train_preds.append(np.mean(np.asarray(train_preds_fold),axis=0)) # average\n",
     "    val_preds.append(np.mean(np.asarray(val_preds_fold),axis=0))\n",
     "    \n",
     "cv_gini_mean = np.nanmean(np.asarray(cv_ginis),axis=0)\n",
@@ -1198,7 +1174,9 @@
    "cell_type": "code",
    "execution_count": 467,
    "id": "98b855c5-40dd-470c-bffe-dc209c4b52e8",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "# average val_preds across folds to get val_y_pred\n",
@@ -1322,7 +1300,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.9.4"
   }
  },
  "nbformat": 4,
