--- a/covid19/timeseriesanalysis_XGboost_7day.ipynb
+++ b/covid19/timeseriesanalysis_XGboost_7day.ipynb
@@ -33,26 +33,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 6,
    "id": "6f0fb281-f561-474c-b3d0-3497895ae009",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'isoweek'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-6-787d24449165>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     13\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mdeepdiff\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mDeepDiff\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     14\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mdatetime\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mdate\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtimedelta\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 15\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0misoweek\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mWeek\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     16\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mmath\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     17\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mwarnings\u001b[0m\u001b[0;34m;\u001b[0m \u001b[0mwarnings\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msimplefilter\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'ignore'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'isoweek'"
+     ]
+    }
+   ],
    "source": [
     "from collections import defaultdict\n",
     "from pathlib import Path\n",
     "import os\n",
     "import numpy as np\n",
+    "import numpy.matlib\n",
     "import pandas as pd\n",
     "import seaborn as sns\n",
     "import matplotlib.pyplot as plt\n",
+    "%matplotlib inline\n",
     "import pickle\n",
-    "import graphviz\n",
     "from pathlib import Path\n",
     "from xgboost import XGBRegressor, plot_tree\n",
     "from deepdiff import DeepDiff\n",
-    "from sklearn.metrics import mean_absolute_error\n",
+    "from datetime import date, timedelta\n",
+    "from isoweek import Week\n",
+    "import math\n",
+    "import warnings; warnings.simplefilter('ignore')\n",
+    "\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn.preprocessing import MinMaxScaler\n",
+    "from sklearn.model_selection import StratifiedKFold\n",
+    "from sklearn.model_selection import TimeSeriesSplit\n",
+    "from sklearn.metrics import mean_squared_error\n",
     "from sklearn.tree import export_graphviz\n",
-    "%matplotlib inline\n",
     "\n",
     "# Set Matplotlib defaults\n",
     "plt.style.use(\"seaborn-whitegrid\")\n",
@@ -1224,7 +1245,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.9.4"
   }
  },
  "nbformat": 4,
