updating random forest caest case study

--- a/covid19/timeseriesanalysis_MLP_7day_with_lagging.ipynb
+++ b/covid19/timeseriesanalysis_MLP_7day_with_lagging.ipynb
@@ -689,7 +689,10 @@
    "cell_type": "code",
    "execution_count": 140,
    "id": "c9013dcb-0c81-4d7c-93d0-cbc9f3e5cb19",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true,
+    "tags": []
+   },
    "outputs": [
     {
      "name": "stdout",
